feat: add full e-commerce UI, ML API, and update documentation
feat(api): implement cart item update and remove endpoints
feat(ui): add complete frontend with cart management and checkout
feat(ml): create FastAPI prediction service with docs
docs: update README with new features and API documentation
test: add tests for new cart endpoints and UI functionality

--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "test:e2e": "playwright test -c automation/playwright.config.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.2",
     "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "@playwright/test": "^1.48.2"
+    "supertest": "^6.3.3"
   },
   "jest": {
-    "testPathIgnorePatterns": ["<rootDir>/automation/"]
+    "testPathIgnorePatterns": [
+      "<rootDir>/automation/"
+    ]
   }
 }
